<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCliente"
    android:layout_gravity="center">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/num"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/num"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="20sp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/dni"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dni"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="number"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/concepto"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/concepto"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="20sp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/valor"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/valor"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="20sp" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear" />
    </TableRow>
</TableLayout>