<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Parte1">

    <Button
        android:id="@+id/crearCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20sp"/>

    <Button
        android:id="@+id/modificarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificar_cliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crearCliente"
        android:layout_margin="20sp"/>

    <Button
        android:id="@+id/crearFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_factura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificarCliente"
        android:layout_margin="20sp"/>

    <Button
        android:id="@+id/consultarFacturas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar_facturas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crearFactura"
        android:layout_margin="20sp"/>

    <Spinner
        android:id="@+id/spinClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consultarFacturas"/>

    <TextView
        android:id="@+id/facturas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinClientes"
        android:textColor="@color/black"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/volver"
        android:text="@string/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facturas" />
</androidx.constraintlayout.widget.ConstraintLayout>